--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
   <script src="js/app.js"></script>
+  <script src="views/login/login.js"></script>
+  <script src="views/register/register.js"></script>
+  <script src="views/profile/profile.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-fixed-top" ng-controller="NavCtrl">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -26,20 +29,20 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="#/users">Users</a></li>
-          <li><a href="#/profile">Profile</a></li>
+          <li><a href="#/profile" ng-show="currentUser">Profile</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#/login">Login</a></li>
-          <li><a href="#/signup">Sign Up</a></li>
+          <li><a href="#/logout" ng-click="logout()" ng-show="currentUser">logout</a></li>
+          <li><a href="#/login" ng-hide="currentUser">Login</a></li>
+          <li><a href="#/register" ng-hide="currentUser">Register</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-  
   <main>
     <div class="container">
       <div class="row">
+        {{currentUser}}  
         <div ng-view></div>
       </div>
     </div>
